Add chat widget

--- a/src/components/ChatWidget.astro
+++ b/src/components/ChatWidget.astro
@@ -2,7 +2,7 @@
 //REPLACE WITH APPLICABLE CHAT WIDGET CODE
 ---
 
-<chat-widget
+<!-- <chat-widget
   location-id="WnubPYDX2olkZfNPRQvT"
   style="--chat-widget-primary-color: #2563eb; --chat-widget-active-color:#2563eb ;--chat-widget-bubble-color: #2563eb ;"
   use-email-field="true"
@@ -14,4 +14,12 @@
 <script
   src="https://widgets.leadconnectorhq.com/loader.js"
   data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js"
-></script>
+></script> -->
+
+<script 
+  type="text/partytown"
+  src="https://widgets.leadconnectorhq.com/loader.js"  
+  data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js" 
+  data-widget-id="6876cbe581758b53673c033e"
+  defer   > 
+</script>
