--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -53,6 +53,6 @@ import Banner from "../components/Banner.astro";
       <slot />
     </main>
     <Footer />
-    <!-- <ChatWidget /> -->
+    <ChatWidget />
   </body>
 </html>
