--- a/src/components/BookCTA.astro
+++ b/src/components/BookCTA.astro
@@ -7,6 +7,7 @@ const { content } = Astro.props;
 ---
 
 <section
+  id="book-cta"
   class="flex flex-wrap justify-center py-12 lg:py-20 items-center align-middle bg-gradient-to-b from-accent-50 via-white to-accent-50"
 >
   <div
