Change Experience Aviation for AeroCamp

--- a/src/components/ExperienceAviationForm.astro
+++ b/src/components/ExperienceAviationForm.astro
@@ -271,7 +271,7 @@ const { data, options } = Astro.props;
 
         if (ghlRes.ok && portalRes.ok) {
           setTimeout(() => {
-            window.location.href = "/experience-aviation-confirmation";
+            window.location.href = "/aero-camp-confirmation";
           }, 3000);
         } else {
           console.error("Submission failed", {
