--- a/src/pages/aero-camp.astro
+++ b/src/pages/aero-camp.astro
@@ -7,7 +7,7 @@ import PageSummary from "../components/PageSummary.astro";
 import BookCTA from "../components/BookCTA.astro";
 import Content from "../components/Content.astro";
 import programsSwiper from "../data/programSwiper";
-import experienceAviationInfo from "../data/experience-aviation";
+import experienceAviationInfo from "../data/aero-camp";
 import ExperienceAviationForm from "../components/ExperienceAviationForm.astro";
 import bookCTA from "../data/book-cta";
 
