--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@ import bookCTA from "../data/book-cta";
 import UnderHeaderVideo from "../components/UnderHeaderVideo.astro";
 import Awards from "../components/Awards.astro";
 import InstagramFeed from "../components/InstagramFeed.astro";
+import AnnouncementPopup from "../components/AnnouncementPopup.astro";
 
 const { data } = homePage;
 ---
@@ -25,6 +26,8 @@ const { data } = homePage;
   siteDescription={data.pageDescription}
   keywords={data.pageKeywords}
 >
+  <AnnouncementPopup />
+
   <!-- HEADER -->
   <HeaderScreen content={data.header} />
   <Awards />
