--- a/src/components/ContentSplit.astro
+++ b/src/components/ContentSplit.astro
@@ -8,7 +8,7 @@ const { content } = Astro.props;
   <div class="px-4 lg:px-12 py-6 lg:py-0">
     {
       content.upperHeading && (
-        <h3 class="mx-auto mt-12 uppercase text-lg lg:text-xl font-sans font-bold tracking-tight text-accent-300">
+        <h3 class=" mt-12 mb-2 uppercase text-lg lg:text-xl font-sans font-black tracking-tight text-primary-800 bg-accent-300 w-fit px-4">
           {content.upperHeading}
         </h3>
       )
