--- a/src/components/ContentCTA.astro
+++ b/src/components/ContentCTA.astro
@@ -24,7 +24,7 @@ const { content } = Astro.props;
     <div>
       {
         content.upperHeading && (
-          <h3 class="mx-auto mt-12 uppercase text-lg lg:text-xl font-sans font-bold tracking-tight text-accent-300">
+          <h3 class="mt-12 mb-2 uppercase text-lg lg:text-xl font-black tracking-tight text-primary-800 bg-accent-300 w-fit px-4">
             {content.upperHeading}
           </h3>
         )
