--- a/src/components/InstagramFeed.astro
+++ b/src/components/InstagramFeed.astro
@@ -28,7 +28,7 @@ const { content = intro } = Astro.props;
       >
         {
           content.upperHeading && (
-            <p class="text-xl font-sans text-center uppercase lg:text-left font-bold tracking-tight text-accent-300">
+            <p class="text-xl mb-2 font-sans text-center uppercase lg:text-left font-black tracking-tight text-primary-800 bg-accent-300 w-fit px-4">
               {content.upperHeading}
             </p>
           )
