--- a/src/components/ProgramSwiper.astro
+++ b/src/components/ProgramSwiper.astro
@@ -4,11 +4,11 @@ import ProgramCard from "./ProgramCard.astro";
 const { content } = Astro.props;
 ---
 
-<section class="bg-gray-200 py-16 lg:py-24 overflow-hidden">
+<section class="bg-white py-16 lg:py-24 overflow-hidden">
   <div class="">
     {
       content.upperHeading && (
-        <h3 class="mx-auto mt-12 uppercase text-lg lg:text-xl lg:max-w-3xl font-sans text-center font-bold tracking-tight text-accent-300">
+        <h3 class="mx-auto mt-12 mb-2 uppercase text-lg lg:text-xl lg:max-w-3xl font-sans text-center font-black tracking-tight text-primary-800 bg-accent-300 w-fit px-4">
           {content.upperHeading}
         </h3>
       )
